[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Menu.gd" type="Script" id=1]
[ext_resource path="res://Textures/Dragon.png" type="Texture" id=2]
[ext_resource path="res://Resources/MainFontVerySmall.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/MainFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resources/MainFontSmall.tres" type="DynamicFont" id=5]
[ext_resource path="res://Textures/wizard2.png" type="Texture" id=6]

[node name="Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Backdrop" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Artwork" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 732, 187 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Backdrop created by David Revoy"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_fonts" ]

[node name="Title" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.3
rect_min_size = Vector2( 732, 187 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Ultimate Wizards IV"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_colors" ]

[node name="Box" type="VBoxContainer" parent="." index="3"]

anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.8
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Theme", "custom_constants" ]

[node name="Play" type="Button" parent="Box" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 998.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Options" type="Button" parent="Box" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 124.0
margin_right = 998.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="Credits" type="Button" parent="Box" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 248.0
margin_right = 998.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="Quit" type="Button" parent="Box" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 372.0
margin_right = 998.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="CharacterSelect" type="VBoxContainer" parent="." index="4"]

visible = false
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.8
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Theme", "custom_constants" ]

[node name="Panel" type="Panel" parent="CharacterSelect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 998.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 3.6
_sections_unfolded = [ "Size Flags" ]

[node name="Wizards" type="GridContainer" parent="CharacterSelect/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.4
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
columns = 3
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="W117" type="Button" parent="CharacterSelect/Panel/Wizards" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "W117"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Arcane" type="Button" parent="CharacterSelect/Panel/Wizards" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_right = 242.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arcane"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Norwegian" type="Button" parent="CharacterSelect/Panel/Wizards" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 246.0
margin_right = 398.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Norwegian"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Speedo" type="Button" parent="CharacterSelect/Panel/Wizards" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 114.0
margin_right = 120.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Speedo"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="OG" type="Button" parent="CharacterSelect/Panel/Wizards" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 114.0
margin_right = 242.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OG"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Arcane6" type="Button" parent="CharacterSelect/Panel/Wizards" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 246.0
margin_top = 114.0
margin_right = 398.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arcane"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Arcane7" type="Button" parent="CharacterSelect/Panel/Wizards" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 228.0
margin_right = 120.0
margin_bottom = 338.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arcane"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Arcane8" type="Button" parent="CharacterSelect/Panel/Wizards" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 228.0
margin_right = 242.0
margin_bottom = 338.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arcane"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Arcane9" type="Button" parent="CharacterSelect/Panel/Wizards" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 246.0
margin_top = 228.0
margin_right = 398.0
margin_bottom = 338.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arcane"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Preview" type="TextureRect" parent="CharacterSelect/Panel" index="1"]

anchor_left = 0.8
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.399963
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags" ]

[node name="Cancel" type="Button" parent="CharacterSelect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 372.0
margin_right = 998.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancel"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[connection signal="pressed" from="Box/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Box/Quit" to="." method="_on_Quit_pressed"]

[connection signal="mouse_entered" from="CharacterSelect/Panel/Wizards/Arcane" to="." method="_on_Arcane_mouse_entered"]

[connection signal="pressed" from="CharacterSelect/Panel/Wizards/Arcane" to="." method="_on_Arcane_pressed"]

[connection signal="mouse_entered" from="CharacterSelect/Panel/Wizards/OG" to="." method="_on_OG_mouse_entered"]

[connection signal="pressed" from="CharacterSelect/Cancel" to="." method="_on_Cancel_pressed"]


